@@ -65,7 +65,6 @@ protected:
   void LocalizeOverviewToken(char *szStr, bool bAppendSpace = true);
   void LocalizeDay(char *szDay);
   void LoadLocalizedToken();
-  void SplitLongString(char *szString, int splitStart, int splitEnd);
   int ConvertSpeed(int speed);
   map<wstring, DWORD> m_localizedTokens;
   typedef map<wstring, DWORD>::const_iterator ilocalizedTokens;
